components/component1/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: vroom-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: component1
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elcomponent1
  namespace: nmukherj
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-component1
    weight: null
status: {}
